server-side-discovery/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-deployment
  labels:
    app: customer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: yassiin/customer-img:latest
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  labels:
    app: order
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: yassiin/order-img:latest
        ports:
        - containerPort: 8080
